added images to submit issue's form changed buttons color

--- a/roveretosegnala/www/index.html
+++ b/roveretosegnala/www/index.html
@@ -93,7 +93,6 @@
 </head>
 
 <body ng-app="roveretoSegnala">
-    <ion-nav-view></ion-nav-view>
-</body>
+<ion-nav-view></ion-nav-view></body>
 
 </html>
