--- a/roveretosegnala/platforms/android/assets/www/index.html
+++ b/roveretosegnala/platforms/android/assets/www/index.html
@@ -93,7 +93,6 @@
 </head>
 
 <body ng-app="roveretoSegnala" class="platform-android platform-cordova platform-webview">
-    <ion-nav-view></ion-nav-view>
-</body>
+<ion-nav-view></ion-nav-view></body>
 
 </html>
