added new ions the map shows different type of issues managed different type of issues (open,closed,processing) added my issues

--- a/roveretosegnala/platforms/android/assets/www/index.html
+++ b/roveretosegnala/platforms/android/assets/www/index.html
@@ -78,6 +78,7 @@
     <script src="js/filter.js"></script>
     <script src="js/directives.js"></script>
     <script src="js/services/conf.js"></script>
+    <script src="js/services/login.js"></script>
     <!--    library js-->
 
     <!-- Leaflet
