--- a/roveretosegnala/www/index.html
+++ b/roveretosegnala/www/index.html
@@ -78,6 +78,7 @@
     <script src="js/filter.js"></script>
     <script src="js/directives.js"></script>
     <script src="js/services/conf.js"></script>
+    <script src="js/services/login.js"></script>
     <!--    library js-->
 
     <!-- Leaflet
