--- a/roveretosegnala/www/index.html
+++ b/roveretosegnala/www/index.html
@@ -16,11 +16,13 @@
 
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
+    <script src="js/libs/angular-translate.min.js"></script>
 
     <script src="js/libs/angular-leaflet-directive.min.js"></script>
-
     <script src="js/libs/leaflet.js"></script>
+    <script src="js/libs/logger.js"></script>
     <link rel="stylesheet" href="css/leaflet.css">
+
     <!--
     <link href="http://code.ionicframework.com/nightly/css/ionic.css" rel="stylesheet">
     <script src="http://code.ionicframework.com/nightly/js/ionic.bundle.js"></script>
