--- a/roveretosegnala/www/index.html
+++ b/roveretosegnala/www/index.html
@@ -11,7 +11,7 @@
     <link href="css/ionic.min.css" rel="stylesheet">
 
 
-    <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
+    <script src="js/libs/jquery-2.1.0.min.js"></script>
 
     <script src="js/libs/ionic.bundle.min.js"></script>
 
