--- a/roveretosegnala/www/index.html
+++ b/roveretosegnala/www/index.html
@@ -46,7 +46,7 @@
     <script src="js/directives.js"></script>
     <script src="js/services/conf.js"></script>
     <script src="js/services/login.js"></script>
-
+    <script src="js/services/geo.js"></script>
 
 </head>
 
