fixed images problem on 2.3 added card for empty list

--- a/roveretosegnala/www/index.html
+++ b/roveretosegnala/www/index.html
@@ -8,10 +8,15 @@
     <title></title>
 
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/ionic.min.css" rel="stylesheet">
+
+
+
+    <!--  <link href="css/ionic.min.css" rel="stylesheet">
 
 
     <script src="js/libs/jquery-2.1.0.min.js"></script>
+    <script src="js/libs/todataurl.js"></script>
+
 
     <script src="js/libs/ionic.bundle.min.js"></script>
 
@@ -21,19 +26,24 @@
 
     <script src="js/libs/angular-leaflet-directive.min.js"></script>
     <script src="js/libs/leaflet.js"></script>
-    <script src="js/libs/logger.js"></script>
-    <link rel="stylesheet" href="css/leaflet.css">
 
-    <!--
+    <script src="js/libs/logger.js"></script>
+   <link rel="stylesheet" href="css/leaflet.css">-->
+
+    <script src="js/libs/jquery-2.1.0.min.js"></script>
+    <script src="js/libs/base64conversion.js"></script>
     <link href="http://code.ionicframework.com/nightly/css/ionic.css" rel="stylesheet">
     <script src="http://code.ionicframework.com/nightly/js/ionic.bundle.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
+    <script src="js/libs/angular-translate.min.js"></script>
+
     <script src="http://tombatossals.github.io/angular-leaflet-directive/dist/angular-leaflet-directive.min.js"></script>
 
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css">
--->
+    <script src="js/libs/logger.js"></script>
+
     <script src="js/app.js"></script>
 
 
