--- a/roveretosegnala/www/index.html
+++ b/roveretosegnala/www/index.html
@@ -11,13 +11,9 @@
 
 
 
-    <!--  <link href="css/ionic.min.css" rel="stylesheet">
-
-
     <script src="js/libs/jquery-2.1.0.min.js"></script>
-    <script src="js/libs/todataurl.js"></script>
-
-
+    <script src="js/libs/base64conversion.js"></script>
+    <link href="css/ionic.min.css" rel="stylesheet">
     <script src="js/libs/ionic.bundle.min.js"></script>
 
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
@@ -28,8 +24,9 @@
     <script src="js/libs/leaflet.js"></script>
 
     <script src="js/libs/logger.js"></script>
-   <link rel="stylesheet" href="css/leaflet.css">-->
+    <link rel="stylesheet" href="css/leaflet.css">
 
+    <!--
     <script src="js/libs/jquery-2.1.0.min.js"></script>
     <script src="js/libs/base64conversion.js"></script>
     <link href="http://code.ionicframework.com/nightly/css/ionic.css" rel="stylesheet">
@@ -43,6 +40,7 @@
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css">
     <script src="js/libs/logger.js"></script>
+-->
 
     <script src="js/app.js"></script>
 
