--- a/roveretosegnala/www/index.html
+++ b/roveretosegnala/www/index.html
@@ -22,8 +22,15 @@
 
     <script src="js/libs/angular-leaflet-directive.min.js"></script>
     <script src="js/libs/leaflet.js"></script>
-
+    <!--Log-->
     <script src="js/libs/logger.js"></script>
+    <!--    Questionnaire-->
+    <link rel="stylesheet" href="css/ratingV2.css">
+
+
+    <script src="js/libs/ratingV2.js"></script>
+    <script src="js/libs/jquery-impromptu.js"></script>
+
     <link rel="stylesheet" href="css/leaflet.css">
 
     <!--
