Native login extensions

--- a/roveretosegnala/www/index.html
+++ b/roveretosegnala/www/index.html
@@ -62,6 +62,7 @@
     <script src="js/services/conf.js"></script>
     <script src="js/services/LoginService.js"></script>
     <script src="js/services/geo.js"></script>
+    <script src="js/services/sec.js"></script>
 
 </head>
 
